--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,15 @@
-<h1>タスク一覧</h1>
-
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
-  <% end %>
-</ul>
-
-<%= link_to '新規タスクの作成', new_task_path %>
+<div class="row">
+  <aside class="col-sm-4">
+    <%= form_with(model: @task, local: true) do |f| %>
+      <div class="form-group">
+        <%= f.label :status, 'ステータス', class:'control-label' %>
+        <%= f.text_area :status, class: 'form-control', rows: 1 %>
+        <%= f.label :content, 'タスク', class:'control-label' %>
+        <%= f.text_area :content, class: 'form-control', rows: 1 %>
+      </div>
+      <%= f.submit '作成', class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </aside>
+<div class="col-sm-8">
+    <%= render 'tasks/tasks', tasks: @tasks %>
+</div>
