--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,8 +1,8 @@
 <% if model.errors.any? %>
   <div id="error_explanation" class="alert alert-warning">
     <ul class="mb-0">
-      <% model.errors.full_tasks.each do |task| %>
-        <li><%= task %></li>
+      <% @user.errors.full_messages.each do |user| %>
+        <li><%= user %></li>
       <% end %>
     </ul>
   </div>
